# quantum-locker

./: PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  cleaner.rs  clipboard_store.rs  commands.rs  crypto.rs  entropy.rs  keychain.rs  lib.rs  main.rs  notes.rs  qr.rs  secure_rng.rs  state.rs  utils.rs  vault.rs
src/assets/: HELP.md
src/components/auth/: AuthOverlay.tsx
src/components/dashboard/: AddressBar.tsx  FileGrid.tsx  Toolbar.tsx
src/components/layout/: Sidebar.css  Sidebar.tsx
src/components/modals/: AppModals.tsx  HelpModal.tsx
src/components/views/: BookmarksView.tsx  CleanerView.tsx  ClipboardView.css  ClipboardView.tsx  FilesView.tsx  HomeView.tsx  NotesView.css  NotesView.tsx  QrView.tsx  ShredderView.css  ShredderView.tsx  VaultView.css  VaultView.tsx
src/hooks/: useAuth.ts  useBookmarks.ts  useClipboard.ts  useCrypto.ts  useDragDrop.ts  useFileSystem.ts  useNotes.ts  useTheme.ts  useVault.ts
src/styles/: components.css  dashboard.css
