[package]
name = "qre-gui"
version = "2.3.1"
description = "QRE Locker"
authors = ["Project QRE"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.3.0"
walkdir = "2"
aes-gcm = "0.10"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3.5"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
bincode = "1.3"
zstd = "0.13"
zeroize = { version = "1.7", features = ["derive"] }
anyhow = "1.0"
sysinfo = "0.32"
uuid = { version = "1.8", features = ["v4"] }
directories = "5.0"
argon2 = "0.5"
trash = "3.3.1" 

# Optimization profiles
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3
panic = "abort"
