[package]
name = "qre-gui"
version = "2.5.0"
description = "QRE Privacy Toolkit"
authors = ["Project QRE"]
edition = "2021"

[lib]
name = "qre_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.3.0"
walkdir = "2"
aes-gcm = "0.10"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
bincode = "1.3"
zstd = "0.13"
zeroize = { version = "1.7", features = ["derive"] }
anyhow = "1.0"
sysinfo = "0.32"
uuid = { version = "1.8", features = ["v4"] }
directories = "5.0"
argon2 = "0.5"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"

# Add trash only for non-Android targets
[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "3.3.1"

# Optimization profiles
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"
panic = "abort"
